<resources>
    <string name="app_name">Vyfe</string>
    <string name="video_tittle">Nom : </string>
    <string name="video_info">Informations sur la vidéo</string>
    <string name="no_description">Pas de description </string>
    <string name="description">Description : </string>
    <string name="play_video">Visionner</string>
    <string name="edit">Modifier</string>
    <string name="upload">Uploader</string>
    <string name="information">Informations sur la vidéo</string>
    <string name="title_video">Titre de la vidéo</string>
    <string name="start_session">Lancer une session</string>
    <string name="start_multi_session">Lancer une session collaborative</string>
    <string name="my_videos">Consulter vos vidéos</string>
    <string name="search">Rechercher</string>
    <string name="hello_user">Bonjour</string>
    <string name="connected">Connexion</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="lost_password">Mot de passe oublié ?</string>
    <string name="connected_maj">Se connecter</string>
    <string name="info_session">Informations sur la session</string>
    <string name="add_description">Ajouter une description</string>
    <string name="my_analyse">Mes grilles d\'analyses</string>
    <string name="grid_title">Titre de la grille</string>
    <string name="create_tags">Créer des tags</string>
    <string name="go">Démarrer</string>
    <string name="share_url">Partagez l\'adresse URL à vos apprenants</string>
    <string name="url">http://vyfe.co/live/356</string>
    <string name="category">Category</string>
    <string name="name_observation">Nom observation</string>
    <string name="avatar">avatar</string>
    <string name="new_grid">Nouvelle grille d\'analyse</string>
    <string name="choose_color">Choisir votre couleur</string>
    <string name="name">Nom</string>
    <string name="color">Couleur</string>
    <string name="choose">Choisir une couleur</string>
    <string name="aleatory">Couleur aléatoire</string>
    <string name="end">Terminer</string>
    <string name="tag_name">Nom du tag</string>
    <string name="tag_color">Couleur du tag</string>
    <string name="def_color" translatable="false">Définissez un nom au tag</string>
    <string name="grid_import">Choississez votre grille d\'observation :</string>
    <string name="new_grid2">Créer une nouvelle grille d\'observation</string>
    <string name="move">Tag déplacé</string>
    <string name="delete_tag">Tag supprimé</string>
    <string name="infos_video">Informations sur la vidéo</string>
    <string name="video_name">Nom de la vidéo</string>
    <string name="record_session">Enregistrer une session</string>
    <string name="modif_tags">Ajouter ou modifier les tags</string>
    <string name="add_tags">Ajouter des tags</string>
    <string name="edit_tags">Modifier les tags</string>
    <string name="next">Suivant</string>
    <string name="video_save">Session enregistrée dans vos vidéos</string>
    <string name="back_to_main">Retour à l\'accueil</string>
    <string name="show_video">Visionner</string>
    <string name="confirm_delete_video">Voulez-vous vraiment supprimer cette vidéo ?</string>
    <string name="cancel">Annuler</string>
    <string name="delete_app">Supprimer la vidéo du périphérique</string>
    <string name="wait_few_minutes">Cela peut prendre plusieurs minutes...</string>
    <string name="save_in_progress">Sauvegarde en cours...</string>
    <string name="bad_authentifiaction">L\'authentification a échoué. Vérifiez votre email et mot de passe</string>
    <string name="havent_video">Vous n\'avez pas encore de vidéo</string>
    <string name="logout">Déconnection</string>
    <string name="enter_email">Entrez une adresse mail</string>
    <string name="enter_password">Entrer un mot de passe</string>
    <string name="mail_send">Email envoyé</string>
    <string name="mail_unkown">Email inconnu</string>
    <string name="send">Envoyer</string>
    <string name="timestamp">Date</string>
    <string name="contact">Vous pouvez nous contacter sur : <u>www.vyfe.fr</u></string>
    <string name="create_account">Créer un compte</string>
    <string name="havent_grid">Vous n\'avez pas encore de grille</string>
    <string name="havent_tag">Vous n\'avez pas de tags</string>
    <string name="description_added">Description ajoutée</string>
    <string name="title">Veuillez renseigner un titre de vidéo</string>
    <string name="double_name">Nom déjà utilisé. Veuillez renseigner un nouveau nom</string>
    <string name="upload_video">Votre vidéo a été mise en ligne</string>
    <string name="error">erreur :</string>
    <string name="quit_app">Voulez-vous quitter l\'application</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="import_grid_arrow">Sélectionner une grille</string>
    <string name="arrow"> \ \ \ ▼</string>
    <string name="choose_name_grid">Indiquez un titre à votre grille d\'observation :</string>
    <string name="empty_grid">Veuiller indiquer des tags ou une grille d\'observation</string>
    <string name="title_session">Titre de votre vidéo :</string>
    <string name="add_tag">Ajouter le tag</string>
    <string name="restart_session">Relancer une Session</string>
    <string name="deconnected">Etes-vous sûr(e) de vouloir vous déconnecter ?</string>
    <string name="active_wifi">Vous devez posséder une connexion internet pour vous identifiez</string>
    <string name="wifi_active">Vous devez activer votre wifi pour lancer une session collaborative</string>
    <string name="start_wifi">Activer Wifi</string>
    <string name="expired_month">Il vous reste moins d\' 1 mois de licence pour profiter de cette fabuleuse application</string>
    <string name="expired_7_days">Attention, cette application s\'autodétruira dans moins de 7jours ;)</string>
    <string name="expired_day">Attention, il ne vous reste qu\'un jour d\'utilidation</string>
    <string name="invalid_date">Date invalide</string>
    <string name="expired_licence">Votre licence a expiré, merci de nous contacter pour la prolonger</string>
    <string name="save_session">Voulez vous enregistré la session en cours ?</string>
    <string name="free_storage">Stockage disponible : </string>
    <string name="pourcentage"> %</string>
    <string name="fullstorage">\nAttention votre stockage est plein !\nFonctionnalités limitées</string>
    <string name="dont_save_session">Vous ne disposez pas d\'assez d\'espace de stockage pour enregistrer la Session. \n\n Liberez de l\'espace pour enregistrer une nouvelle session </string>
    <string name="save_grid">Enregistrer la nouvelle grille</string>
    <string name="create_grid">Créer une nouvelle grille d\'observation</string>
    <string name="create_grid_short">Créer une grille</string>
    <string name="create_title_video">Indiquez un titre à votre vidéo :</string>
    <string name="edit_grid">Vos grilles d\'observations</string>
    <string name="no_license_available">Vous ne disposez pas de licence</string>
    <string name="problem">Problème d\'authentification :</string>
    <string name="title_tagSet">Vous devez indiquez un titre à votre session ET une grille d\'observation</string>
    <string name="end_upload">Fin du téléchargement</string>
    <string name="alert">Alerte</string>
    <string name="upload_contact">Pour accéder à cette fonctionnalitée, vous devez possedez un accès à la plateforme   Vous pouvez nous contacter sur www.vyfe.fr</string>
    <string name="ok">Ok</string>
    <string name="start_upload">Téléchargement commencé</string>
    <string name="have_internet_connection">Vous devez posseder une connexion Internet pour télécharger vos vidéos</string>
    <string name="online">Vidéo en ligne</string>
    <string name="upload_vimeo">Vidéo téléchargée</string>
    <string name="tagset_title_warning">Vous devez indiquez un titre à votre session ET une grille d\'observation</string>
    <string name="create_tagset_title"> Vos grilles d\'observations</string>
    <string name="color_gradient_blue_dark">Violet</string>
    <string name="color_gradient_blue_light">Bleu clair</string>
    <string name="color_gradient_faded_orange">Orange</string>
    <string name="color_gradient_green">Vert clair</string>
    <string name="color_gradient_rosy">Rose</string>
    <string name="color_gradient_red">Rouge</string>
    <string name="color_gradient_blue">Bleu</string>
    <string name="color_gradient_yellow">Jaune</string>
    <string name="color_gradient_magenta_light">Violet Clair</string>
    <string name="color_gradient_green_lightgreen">Vert</string>
    <string name="color_gradient_grey">Gris</string>
    <string name="grid_name_empty_warning">Vous devez renseigner un titre à votre grille et des tags</string>
    <string name="save_grid_info">Grille enregistrée</string>
    <string name="permission_request">Vyfe app need permissions to record a video. Please check your config</string>
    <string name="camera_error">This device is not supported for video record</string>
    <string name="connection">Vous devez vous connecter</string>
    <string name="ask_permissions">Demande de permissions</string>
    <string name="ask_permissions_message">Pour fonctionner correctement, l\'application à besoin d\'utiliser le son, la caméra et le stockage de votre tablette</string>
    <string name="used_grid">Grille utilisée : </string>
    <string name="space" />
    <string name="delete_session">Vidéo supprimée</string>
    <string name="save_session_record">Video enregistré:</string>
    <string name="info_movie">Informations sur votre vidéo</string>
    <string name="ask_connection">Vous devez vous connecter</string>
    <string name="save_edit">Modifications enregistrées</string>
    <string name="change_movie">Modifier la vidéo</string>
    <string name="confirm_change_movie">Valider les modifications ?</string>
    <string name="date_session">Date :</string>
    <string name="duration_session">Durée :</string>
    <string name="info_max_tags">Attention si vous utilisez plus de 10 tags, le feedback ne va pas être optimal.Nous vous conseillons d\'utiliser au maximum 10 tags</string>
    <string name="off_on">Off/On : </string>
    <string name="start_live">Lancement d\'une session collaborative</string>
    <string name="Grid">Grille</string>
    <string name="live">Live</string>
    <string name="add_connexion">Vous devez posseder une connexion Internet pour lire cette vidéo</string>
    <string name="delete_server">Supprimer la vidéo de la plateforme Web</string>
    <string name="participants">Participants : </string>
    <string name="observer">Observateur : </string>
    <string name="unknow">Inconnu</string>
    <string name="delete_all">Supprimer la session</string>
    <string name="name_unknow">Non connu</string>
    <string name="info_delete">Vous n\'avez pas téléchargé votre vidéo sur la plateforme, si vous la supprimer, elle ne sera plus disponible</string>
    <string name="havent_roles_teacher">Les droits liés à votre profil sont insuffisants, veuillez contacter votre administrateur</string>
    <string name="try_again">Réessayer</string>
    <string name="connecting_internet">Vous devez posseder une connexion à Internet pour activer la session collaborative</string>
    <string name="your_tagSets">Vos grilles d\'observation</string>
    <string name="havent_tag_sets">Vous n\'avez pas de grille d\'observation</string>
    <string name="you_have" translatable="false">Vous avez</string>
    <string name="tag_set">Grille d\'observation</string>
    <string name="home">Accueil</string>
    <string name="start_video_session">Lancer une session vidéo</string>
    <string name="movies">Mes vidéos</string>
    <string name="back">Retour</string>
    <string name="version">Version :</string>
    <string name="end_licence">Fin de licence : </string>
</resources>