<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingTop="15dp"
        android:text="@string/start_live"
        android:textColor="@color/colorWhiteTwo"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"/>

    <Switch
        android:id="@+id/switch_live_conexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/off_on"
        android:textColor="@color/colorWhiteTwo"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tv_observer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/participants"
        android:textColor="@color/colorWhiteTwo"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/switch_live_conexion" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_observer"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:paddingEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_observer" />

</android.support.constraint.ConstraintLayout>
