<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".activity.SelectVideoActivity">

    <include
        android:id="@+id/appBar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.3"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/vv_preview"
                        android:layout_width="match_parent"
                        android:layout_height="217dp"
                        android:alpha="0.5"
                        app:srcCompat="@android:color/darker_gray" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@+id/vv_preview"
                        app:layout_constraintEnd_toEndOf="@+id/vv_preview"
                        app:layout_constraintStart_toStartOf="@id/vv_preview"
                        app:layout_constraintTop_toTopOf="@+id/vv_preview"
                        app:srcCompat="@drawable/icons8_lecture_de_youtube_100" />

                </android.support.constraint.ConstraintLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:id="@+id/tv_fix_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/video_tittle"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:fontFamily="@font/roboto_bold" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/video_tittle"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_marginLeft="8dp"
                        app:fontFamily="@font/roboto_bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/tv_fix_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/description"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:fontFamily="@font/roboto" />

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/no_description"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:fontFamily="@font/roboto" />
                </LinearLayout>

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/bt_play"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0.3"
                        android:background="@drawable/style_button"
                        android:text="@string/play_video"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:fontFamily="@font/roboto_bold" />

                    <Button
                        android:id="@+id/btn_edit"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="0.3"
                        android:background="@drawable/style_button_white"
                        android:text="@string/edit"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        app:fontFamily="@font/roboto_bold" />

                    <Button
                        android:id="@+id/btn_upload"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="0dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="00dp"
                        android:layout_weight="0.3"
                        android:background="@drawable/style_button_white"
                        android:text="@string/upload"
                        android:textColor="@color/colorBlack"
                        android:textSize="18sp"
                        android:visibility="visible"
                        app:fontFamily="@font/roboto_bold" />

                    <ImageView
                        android:id="@+id/iv_upload"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_weight="0.3"
                        android:src="@drawable/animation_roue_white"
                        android:visibility="invisible" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_grid_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/used_grid"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:fontFamily="@font/roboto_bold"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/tv_grid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/used_grid"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:fontFamily="@font/roboto"
                    android:layout_gravity="center"/>

                <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/re_tags"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="match_parent"

                    android:padding="20dp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>